fix: hidden title on mobile

--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -39,11 +39,14 @@ body {
   color: black;
 }
 
-.md-nav__item--section {
-  display: block;
-  margin: 2em 0;
-}
 
-label.md-nav__title {
-  display: none;
+@media screen and (min-width: 76.25em) {
+  label.md-nav__title {
+    display: none;
+  }
+
+  .md-nav__item--section {
+    display: block;
+    margin: 2em 0;
+  }
 }
